--- a/packages/themes/_input.scss
+++ b/packages/themes/_input.scss
@@ -11,12 +11,8 @@ textarea {
 }
 
 select {
-  -moz-appearance: none;
-  -webkit-appearance: none;
   appearance: none;
-
   background-color: hsl(0, 0%, 100%);
-
   background-image: url("data:image/svg+xml,%3Csvg version='1.1' id='Layer_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 123.5 68.5' style='enable-background:new 0 0 123.5 68.5;' xml:space='preserve'%3E%3Cstyle type='text/css'%3E .st0%7Bfill:none;stroke:%23D1D1D1;stroke-width:8;stroke-miterlimit:10;%7D .st1%7Bfill:none;stroke:%23D1D1D1;stroke-width:3;stroke-miterlimit:10;%7D%0A%3C/style%3E%3Cpolyline id='XMLID_1_' class='st0' points='108.7,27.2 89.2,46.7 69.8,27.2 '/%3E%3Cline id='XMLID_15_' class='st1' x1='26' y1='2.5' x2='26' y2='65.5'/%3E%3C/svg%3E");
   background-position: right 0.5em top 50%, 0 0;
   background-repeat: no-repeat, repeat;
@@ -30,8 +26,7 @@ select {
   width: 100%;
 }
 
-textarea.material-input,
-input.material-input,
+.material-input,
 .flatpickr-input {
   background: $light-bg;
   border-radius: 4px;
@@ -43,9 +38,13 @@ input.material-input,
   .new-message-creator & {
     border: 2px solid $primary-color;
   }
+
+  .settingsTab .flex-content--right50 & {
+    max-width: 50%;
+  }
 }
 
-label.material-label {
+.material-label {
   background: transparent;
   color: #fff;
   font-family: "Open Sans", sans-serif;
@@ -66,14 +65,9 @@ label.material-label {
   padding: 4px;
 }
 
-input.material-input,
-.flatpickr-input {
-  max-width: 50%;
-}
-
 .input-group {
-  & > .input-group-prepend {
-    & > .btn {
+  > .input-group-prepend {
+    > .btn {
       margin-left: 1px;
 
       &:last-child {
@@ -142,46 +136,44 @@ $md-checkbox-label-padding: 0.5em;
       // checkmark
     }
   }
+}
 
-  input[type="checkbox"] {
-    display: block;
-    float: left;
-    font-size: inherit;
-    margin: 0;
-    outline: 0;
-    visibility: hidden;
-    width: $md-checkbox-size;
+.md-checkbox--checkbox {
+  display: block;
+  float: left;
+  font-size: inherit;
+  margin: 0;
+  outline: 0;
+  visibility: hidden;
+  width: $md-checkbox-size;
 
+  &:checked {
+    + label::before {
+      background: $md-checkbox-checked-color;
+      border: 0;
+    }
+    + label::after {
+      $md-checkmark-size: $md-checkbox-size - 2 * $md-checkbox-padding;
+      border: $md-checkmark-width solid $md-checkmark-color;
+      border-right-style: none;
+      border-top-style: none;
+      height: $md-checkmark-size / 2;
+      transform: translate(
+          $md-checkbox-padding,
+          ($md-checkbox-size / 2) - ($md-checkmark-size / 2.6)
+        )
+        rotate(-45deg);
+      width: $md-checkmark-size;
+    }
+  }
+
+  &:disabled {
+    + label::before {
+      border-color: $md-checkbox-border-color-disabled;
+    }
     &:checked {
       + label::before {
-        background: $md-checkbox-checked-color;
-        border: none;
-      }
-      + label::after {
-        $md-checkmark-size: $md-checkbox-size - 2 * $md-checkbox-padding;
-
-        border: $md-checkmark-width solid $md-checkmark-color;
-        border-right-style: none;
-        border-top-style: none;
-        height: $md-checkmark-size / 2;
-
-        transform: translate(
-            $md-checkbox-padding,
-            ($md-checkbox-size / 2) - ($md-checkmark-size / 2.6)
-          )
-          rotate(-45deg);
-        width: $md-checkmark-size;
-      }
-    }
-
-    &:disabled {
-      + label::before {
-        border-color: $md-checkbox-border-color-disabled;
-      }
-      &:checked {
-        + label::before {
-          background: $md-checkbox-checked-color-disabled;
-        }
+        background: $md-checkbox-checked-color-disabled;
       }
     }
   }
