--- a/packages/themes/_print.scss
+++ b/packages/themes/_print.scss
@@ -21,11 +21,10 @@
       min-height: initial;
       page-break-after: always;
       position: initial;
-      position: initial;
       width: initial;
     }
 
-    & > span {
+    > span {
       bottom: 0;
       color: #555;
       font-size: 12pt;
