Progress Indicator component now has a complete set of storybook docs

--- a/packages/components/src/local/progress-indicator/styles.module.scss
+++ b/packages/components/src/local/progress-indicator/styles.module.scss
@@ -70,5 +70,5 @@ $progress-height: 2px;
 .complete {
   composes: indicator;
   background: $success-color;
-  border: 2px solid $success-color;
+  border: 2px solid darken($success-color, 15%);
 }
