Fix player UI style lint issues

--- a/packages/themes/_flex-layout.scss
+++ b/packages/themes/_flex-layout.scss
@@ -46,6 +46,10 @@
       .btn-action--primary {
         margin-top: 16px;
       }
+
+      .material-input {
+        max-width: 250px;
+      }
     }
 
     &--rowend {
