--- a/packages/themes/_searchlist.scss
+++ b/packages/themes/_searchlist.scss
@@ -71,100 +71,6 @@
     width: 100%;
   }
 
-  .searchlist-list {
-    display: flex;
-    flex-direction: column;
-    flex-grow: 2;
-    height: 100%;
-    max-height: calc(59vh - 153px);
-    overflow-y: scroll;
-    padding-bottom: 100px;
-
-    .list-title,
-    .searchlist-title {
-      align-items: center;
-      border-bottom: 1px solid #f2f2f2;
-      display: flex;
-      margin-bottom: 0 !important;
-      padding: 1em 0.45em;
-      position: relative;
-      width: 100%;
-
-      span {
-        cursor: pointer;
-        margin-bottom: 0 !important;
-      }
-
-      &:hover {
-        color: $dark-grey;
-        text-decoration: none;
-      }
-
-      &.active {
-        background: #fff;
-        color: $dark-grey;
-        font-weight: bold;
-      }
-
-      .wargame-started-highlight {
-        background: green;
-        border-radius: 100%;
-        display: inline-flex;
-        height: 20px;
-        margin-right: 15px;
-        width: 20px;
-      }
-
-      .wargame-unstarted-highlight {
-        background: orange;
-        border-radius: 100%;
-        display: inline-flex;
-        height: 20px;
-        margin-right: 15px;
-        width: 20px;
-      }
-
-      .wargame-option-menu-btn {
-        cursor: pointer;
-        margin: 0 8px;
-        margin-left: auto;
-      }
-
-      .wargame-option-menu {
-        background: white;
-        border: 1px solid $grey;
-        display: flex;
-        flex-direction: column;
-        height: auto;
-        position: absolute;
-        right: 6px;
-        top: 2.25em;
-        width: 160px;
-        z-index: 3;
-
-        span {
-          align-items: center;
-          display: flex;
-
-          svg {
-            margin-right: 6px;
-            min-width: 1.25em;
-          }
-        }
-      }
-
-      .wargame-option-menu-bg {
-        display: flex;
-        height: 100%;
-        left: 0;
-        position: fixed;
-        top: 0;
-        width: 100%;
-        z-index: 2;
-      }
-    }
-  }
-
   svg {
     display: inline-flex;
     font-size: 0.9em;
@@ -179,4 +85,97 @@
       opacity: 1;
     }
   }
+
+  .wargame-option-menu-btn {
+    cursor: pointer;
+    margin: 0 8px 0 auto;
+  }
+}
+
+.searchlist-list {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 2;
+  height: 100%;
+  max-height: calc(59vh - 153px);
+  overflow-y: scroll;
+  padding-bottom: 100px;
+
+  .list-title,
+  .searchlist-title {
+    align-items: center;
+    border-bottom: 1px solid #f2f2f2;
+    display: flex;
+    margin-bottom: 0 !important;
+    padding: 1em 0.45em;
+    position: relative;
+    width: 100%;
+
+    span {
+      cursor: pointer;
+      margin-bottom: 0 !important;
+    }
+
+    &:hover {
+      color: $dark-grey;
+      text-decoration: none;
+    }
+
+    &.active {
+      background: #fff;
+      color: $dark-grey;
+      font-weight: bold;
+    }
+
+    .wargame-started-highlight {
+      background: #008000;
+      border-radius: 100%;
+      display: inline-flex;
+      height: 20px;
+      margin-right: 15px;
+      width: 20px;
+    }
+
+    .wargame-unstarted-highlight {
+      background: #ffa500;
+      border-radius: 100%;
+      display: inline-flex;
+      height: 20px;
+      margin-right: 15px;
+      width: 20px;
+    }
+  }
+}
+
+.wargame-option-menu {
+  background: #fff;
+  border: 1px solid $grey;
+  display: flex;
+  flex-direction: column;
+  height: auto;
+  position: absolute;
+  right: 6px;
+  top: 2.25em;
+  width: 160px;
+  z-index: 3;
+
+  span {
+    align-items: center;
+    display: flex;
+
+    svg {
+      margin-right: 6px;
+      min-width: 1.25em;
+    }
+  }
+}
+
+.wargame-option-menu-bg {
+  display: flex;
+  height: 100%;
+  left: 0;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 2;
 }
