--- a/packages/components/src/local/asset-icon/styles.module.scss
+++ b/packages/components/src/local/asset-icon/styles.module.scss
@@ -1,8 +1,11 @@
 .asset-icon {
-  z-index: 9999;
-  width: 50px;
-  height: 50px;
+  
   border-radius: 100%;
+  background-repeat: no-repeat;
+  background-position: 50%;
+  background-size: 80%;
+  box-shadow: 3px 3px 2px rgba(0,0,0,.25);
+  border: 1px solid hsla(0,0%,100%,.6);
 }
 
 .force {
@@ -12,4 +15,12 @@
 
 .blue {
   background-color: #0f4bf0;
+}
+
+$platforms: frigate, destroyer, mcmv, unknown, agi, fast-attack-craft, uas, merchant-vessel, fixed-wing-aircraft, fishing-vessel, missile, helicopter, boghammer, coastal-radar-site, datum, torpedo, pirate, mine;
+
+@each $platform in $platforms {
+  .platform-type-#{$platform} {
+    background-image: url("./counters/#{$platform}.svg");
+  }
 }
