--- a/packages/components/src/local/hex-grid/styles.module.scss
+++ b/packages/components/src/local/hex-grid/styles.module.scss
@@ -1,6 +1,6 @@
 .default-hex {
-  fill: transparent !important;
-  stroke: #fff !important;
-  opacity: 0.2 !important;
-  stroke-width: 3 !important;
+  fill: transparent;
+  stroke: #fff;
+  opacity: 0.2;
+  stroke-width: 3;
 }
