Remove styling elements added for debugging

--- a/packages/components/src/local/hex-grid/styles.module.scss
+++ b/packages/components/src/local/hex-grid/styles.module.scss
@@ -1,12 +1,6 @@
 .default-hex {
   fill: transparent;
-  stroke: #0f0;
+  stroke: #fff;
   opacity: 0.2;
-  stroke-width: 3;
-}
-.default-border {
-  fill: transparent;
-  stroke: #f00;
-  opacity: 0.2;
-  stroke-width: 3;
+  stroke-width: 2;
 }
