--- a/packages/components/src/local/dialogue/styles.module.scss
+++ b/packages/components/src/local/dialogue/styles.module.scss
@@ -2,7 +2,7 @@
   background-color: rgba(255, 255, 255, 0.65);
   width: 335px;
   border-radius: 5px;
-  box-shadow: 0 4px 4px rgba(0,0,0,.25);
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .default {
