--- a/packages/components/src/local/map-bar/styles.module.scss
+++ b/packages/components/src/local/map-bar/styles.module.scss
@@ -6,17 +6,16 @@
   width: 350px;
   height: 100%;
   background-color: #fff;
-  border-right: 2px solid #1A394D;
+  border-right: 2px solid #1A394d;
   transition: left 0.5s ease-in-out;
 
   section {
     height: 50%;
-  } 
+  }
 }
 
-
 .top {
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid #000;
 }
 
 .open {
@@ -28,7 +27,7 @@
 
 .toggle {
   cursor: pointer;
-  background-color: #54667C;
+  background-color: #54667c;
   color: #fff;
   width: 20px;
   height: 71px;
