Switch to legacy green color shades

--- a/packages/components/src/local/asset-icon/styles.module.scss
+++ b/packages/components/src/local/asset-icon/styles.module.scss
@@ -17,7 +17,7 @@
 }
 
 .blue {
-  background-color: #0f4bf0;
+  background-color: #000fff;
 }
 
 .red {
@@ -25,7 +25,7 @@
 }
 
 .green {
-  background-color: #00ff00;
+  background-color: #19bd37;
 }
 
 .popup {
