Fixes linting errors

--- a/packages/components/src/local/dialogue/styles.module.scss
+++ b/packages/components/src/local/dialogue/styles.module.scss
@@ -13,11 +13,11 @@
 }
 
 .perceived-as {
-  background-color: lightpink;
+  background-color: #ffb6c1;
 }
 .planning {
-  background-color: lightgreen
+  background-color: #90ee90;
 }
 .adjudication {
-  background-color: lightgoldenrodyellow;
+  background-color: #fafad2;
 }
