--- a/packages/components/src/local/world-state/styles.module.scss
+++ b/packages/components/src/local/world-state/styles.module.scss
@@ -1,7 +1,7 @@
 .world-state {
   display: block;
   padding: 1rem;
-  background-color: lightsteelblue;
+  background-color: #b0c4de;
   height: 100%;
   box-sizing: border-box;
 }
