--- a/packages/components/src/local/asset-icon/styles.module.scss
+++ b/packages/components/src/local/asset-icon/styles.module.scss
@@ -7,7 +7,7 @@
   box-shadow: 3px 3px 2px rgba(0, 0, 0, 0.25);
   border: 1px solid hsla(0, 0%, 100%, 0.6);
   &.selected {
-    border: 4px solid rgba(255, 255, 255, .7);
+    border: 4px solid rgba(255, 255, 255, 0.7);
   }
 }
 
