Calculations being conducted

--- a/packages/components/src/local/hex-grid/styles.module.scss
+++ b/packages/components/src/local/hex-grid/styles.module.scss
@@ -5,6 +5,13 @@
   stroke-width: 2;
 }
 
+.allowable-hex {
+  fill: #f00;
+  stroke: #fff;
+  opacity: 0.8;
+  stroke-width: 2;
+}
+
 .default-coords {
   line-height: 20px;
   opacity: 0.4;
