--- a/packages/components/src/local/form-elements/rcb/styles.module.scss
+++ b/packages/components/src/local/form-elements/rcb/styles.module.scss
@@ -8,7 +8,7 @@
       content: "";
       width: 25px;
       height: 1rem;
-      background-color: #ff0000;
+      background-color: #f00;
     }
   }
 }
