--- a/packages/components/src/local/map-bar/styles.module.scss
+++ b/packages/components/src/local/map-bar/styles.module.scss
@@ -6,8 +6,12 @@
   width: 350px;
   height: 100%;
   transition: left 0.5s ease-in-out;
+}
 
-  section {
+.inner {
+  overflow-y: scroll;
+  height: 100%;
+  section:first-of-type {
     height: 50%;
   }
 }
