Fixes bug with radio buttons showing as selected even if they were not

--- a/packages/components/src/local/map-bar/styles.module.scss
+++ b/packages/components/src/local/map-bar/styles.module.scss
@@ -18,8 +18,10 @@
 
 .open {
   left: 0;
-  svg {
-    transform: rotate(180deg);
+  .toggle {
+    svg {
+      transform: rotate(180deg);
+    }
   }
 }
 
