add turn decoration to history and planned routes

--- a/packages/components/src/local/mapping/leaflet.css
+++ b/packages/components/src/local/mapping/leaflet.css
@@ -555,10 +555,10 @@ svg.leaflet-image-layer.leaflet-interactive path {
 
 /* div icon */
 
-.leaflet-div-icon {
+/* .leaflet-div-icon {
 	background: #fff;
 	border: 1px solid #666;
-	}
+} */
 
 
 /* Tooltip */
