--- a/packages/components/src/local/map-bar/styles.module.scss
+++ b/packages/components/src/local/map-bar/styles.module.scss
@@ -27,7 +27,7 @@
   a[class*="leaflet-popup-close-button"] {
     padding: 4px 2px;
     background-color: #fff;
-    border-radius: 2px 2px 2px 2px;
+    border-radius: 2px;
   }
 }
 
@@ -53,7 +53,7 @@
   cursor: move;
   background-color: #fff;
   border-radius: 2px;
-  box-shadow: 0 3px 14px rgba(0,0,0,0.4);
+  box-shadow: 0 3px 14px rgba(0, 0, 0, 0.4);
 }
 
 .open {
