--- a/packages/components/src/local/map-bar/styles.module.scss
+++ b/packages/components/src/local/map-bar/styles.module.scss
@@ -20,32 +20,61 @@
   height: 240px;
   border-radius: 2px;
 }
-.popup {
-  div[class*="leaflet-popup-content"] {
-    margin: 0;
-  }
-  a[class*="leaflet-popup-close-button"] {
-    padding: 4px 2px;
-    background-color: #fff;
-    border-radius: 2px;
-  }
+
+.popup > div:first-child {
+  border-radius: 2px;
+}
+.popup > div:first-child div {
+  margin: 0;
+}
+
+.map-bar-controll {
+  margin: 0 !important;
+  height: 100%;
 }
 
 .popup-draggable {
   transform: translateY(50%);
   margin-bottom: -5px;
-  // a[class*="leaflet-popup-close-button"],
-  div[class*="leaflet-popup-tip-container"] {
-    display: none;
-  }
-  div[class*="leaflet-popup-content"] {
-    box-shadow: none;
+}
+
+.popup-draggable > div:first-child {
+  box-shadow: none;
+}
+.popup-draggable > div:first-child div {
+  margin: 0;
+}
+.popup-draggable > div:last-child {
+  display: none;
+}
+
+.actions-holder {
+  height: 24px;
+  background-color: #fff;
+}
+
+.popup-actions-container {
+  position: relative;
+}
+
+.popup-actions {
+  right: 0;
+  position: absolute;
+  top: -24px;
+  font-size: 0px;
+  button {
     margin: 0;
-  }
-  a[class*="leaflet-popup-close-button"] {
-    padding: 5px 3px;
-    border-radius: 0 2px 0 0;
-    margin-top: -24px;
+    border: none;
+    background: none;
+    display: inline-block;
+    vertical-align: top;
+    cursor: pointer;
+    opacity: 0.2;
+    padding: 2px 2px 0 2px;
+
+    :hover {
+      opacity: 0.4;
+    }
   }
 }
 
