Icon needs to be absolute, not relative, otherwise vertical offset gets introduced

--- a/packages/components/src/local/asset-icon/styles.module.scss
+++ b/packages/components/src/local/asset-icon/styles.module.scss
@@ -1,5 +1,5 @@
 .asset-icon {
-  position: relative;
+  position: absolute;
   border-radius: 100%;
   background-repeat: no-repeat;
   background-position: 50%;
