Messages list now uses internal state to manage list of messages

--- a/packages/components/src/local/messages-list/styles.module.scss
+++ b/packages/components/src/local/messages-list/styles.module.scss
@@ -52,7 +52,7 @@
 .link {
   @include primary-shadow;
   @include transition();
-  background-color: $background-alpha-primary;
+  background-color: #666;
   border-radius: 2px;
   color: $primary-triad-color;
   cursor: pointer;
