Comment out sizing for first section in map-bar, since it was also catching first section in the perception panel

--- a/packages/components/src/local/map-bar/styles.module.scss
+++ b/packages/components/src/local/map-bar/styles.module.scss
@@ -11,9 +11,12 @@
 .inner {
   overflow-y: scroll;
   height: 100%;
-  section:first-of-type {
-    height: 400px;
-  }
+  // this block was used to size the world-state panel, but it also caught
+  // the first section within the perception panel, so it has been
+  // commented out:
+  // section:first-of-type {
+  //   height: 400px;
+  // }
 }
 
 .open {
