--- a/packages/components/src/local/map-bar/styles.module.scss
+++ b/packages/components/src/local/map-bar/styles.module.scss
@@ -2,15 +2,21 @@
   position: absolute;
   left: -350px;
   top: 0;
-  z-index: 1010;
   width: 350px;
   height: 100%;
   transition: left 0.5s ease-in-out;
 }
 
 .inner {
-  overflow-y: scroll;
-  height: 100%;
+  z-index: 1020;
+  position: relative;
+  overflow-y: auto;
+  max-height: 100%;
+  border-top: 1px solid #0A2C41;
+  border-left: 1px solid #0A2C41;
+  border-right: 2px solid #0A2C41;
+  border-bottom: 2px solid #0A2C41;
+  box-sizing: border-box;
   // this block was used to size the world-state panel, but it also caught
   // the first section within the perception panel, so it has been
   // commented out:
@@ -29,21 +35,36 @@
 }
 
 .toggle {
+  z-index: 1010;
   cursor: pointer;
-  background-color: #54667c;
+  background-color: #48A65D;
   color: #fff;
-  width: 20px;
+  width: 21px;
   height: 71px;
   position: absolute;
-  top: 0;
+  top: 72px;
   right: -20px;
   border-radius: 0 5px 5px 0;
 
   svg {
+    display: none;
     margin-top: 20px;
     height: 34px;
     width: 30px;
     margin-left: -5px;
     transition: transform 0.5s ease-in-out;
   }
+}
+
+.toggle:first-child {
+  top: 0px;
+  background-color: #54667C;
+}
+
+.toggle-active {
+  z-index: 1030;
+  svg {
+    display: block;
+  }
+  margin-left: -1px;
 }
