--- a/packages/components/src/local/world-state/styles.module.scss
+++ b/packages/components/src/local/world-state/styles.module.scss
@@ -1,10 +1,92 @@
 .world-state {
   display: block;
-  padding: 1rem;
-  background-color: #b0c4de;
-  height: 100%;
+  padding: 0.75rem;
+  background-color: #FEFEFE;
   box-sizing: border-box;
+  font-family: "Open Sans", "sans-serif";
+  min-height: 140px;
 }
+
 .world-state ul {
-  padding-left: 5px;
+  padding: 0;
+  margin: 0 0 26px 0;
+  list-style: none;
+}
+.world-state ul:last-child {
+  margin-bottom: 10px;
+}
+
+.world-state li {
+  padding: 0;
+  margin: 0;
+}
+
+.title {
+  margin: 0 0 1rem 0;
+  text-transform: uppercase;
+  font-size: 18px;
+  color: #434343;
+}
+.item {
+  height: 40px;
+  position: relative;
+  padding: 2px 28px 2px 52px;
+}
+.item p {
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  line-height: 1.4;
+  font-size: 10px;
+  color: #8C9BA5;
+}
+.item p:first-child {
+  line-height: 1;
+  font-size: 14px;
+  color: #000;
+}
+.item svg {
+  display: block;
+}
+
+
+.item-icon {
+  position: absolute;
+  top: 50%;
+  margin-top: -18px;
+  left: 5px;
+  width: 36px;
+  height: 36px;
+  border: 4px solid rgba(0,0,0,0);
+  box-sizing: border-box;
+  box-shadow: none;
+}
+
+.item-check {
+  position: absolute;
+  right: 1px;
+  top: 50%;
+  margin-top: -10px;
+}
+.item-content {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  height: 100%;
+}
+
+.submit {
+  background-color: #54667C;
+  display: block;
+  border: none;
+  border-radius: 5px;
+  padding: 6px 16px;
+  color: white;
+  text-transform: uppercase;
+  margin: 0 auto;
+  font-family: inherit;
+  font-weight: 300;
+  line-height: 1.2;
+  font-size: 18px;
+  margin-bottom: 8px;
 }
