--- a/packages/components/src/local/world-state/styles.module.scss
+++ b/packages/components/src/local/world-state/styles.module.scss
@@ -1,7 +1,7 @@
 .world-state {
   display: block;
   padding: 0.75rem;
-  background-color: #FEFEFE;
+  background-color: #fefefe;
   box-sizing: border-box;
   font-family: "Open Sans", "sans-serif";
   min-height: 140px;
@@ -9,7 +9,7 @@
 
 .world-state ul {
   padding: 0;
-  margin: 0 0 26px 0;
+  margin: 0 0 26px;
   list-style: none;
 }
 .world-state ul:last-child {
@@ -22,7 +22,7 @@
 }
 
 .title {
-  margin: 0 0 1rem 0;
+  margin: 0 0 1rem;
   text-transform: uppercase;
   font-size: 18px;
   color: #434343;
@@ -38,7 +38,7 @@
   width: 100%;
   line-height: 1.4;
   font-size: 10px;
-  color: #8C9BA5;
+  color: #8c9ba5;
 }
 .item p:first-child {
   line-height: 1;
@@ -49,7 +49,6 @@
   display: block;
 }
 
-
 .item-icon {
   position: absolute;
   top: 50%;
@@ -57,7 +56,7 @@
   left: 5px;
   width: 36px;
   height: 36px;
-  border: 4px solid rgba(0,0,0,0);
+  border: 4px solid rgba(0, 0, 0, 0);
   box-sizing: border-box;
   box-shadow: none;
 }
@@ -76,9 +75,9 @@
 }
 
 .submit {
-  background-color: #54667C;
+  background-color: #54667c;
   display: block;
-  border: none;
+  border-width: 0;
   border-radius: 5px;
   padding: 6px 16px;
   color: white;
