--- a/packages/components/src/local/world-state/styles.module.scss
+++ b/packages/components/src/local/world-state/styles.module.scss
@@ -80,7 +80,7 @@
   border-width: 0;
   border-radius: 5px;
   padding: 6px 16px;
-  color: white;
+  color: #fff;
   text-transform: uppercase;
   margin: 0 auto;
   font-family: inherit;
