Finished World State Panel and in progress form

--- a/packages/components/src/local/form/styles.module.scss
+++ b/packages/components/src/local/form/styles.module.scss
@@ -16,7 +16,7 @@
   background-color: #ffb6c1;
 }
 .planning {
-  background-color: #90ee90;
+  background-color: #1A394D;
 }
 .adjudication {
   background-color: #fafad2;
