form header with icon

--- a/packages/components/src/local/form-elements/form-group/styles.module.scss
+++ b/packages/components/src/local/form-elements/form-group/styles.module.scss
@@ -1,5 +1,5 @@
 .group {
-  background-color: #314D5F;
+  background-color: #314d5f;
   border-radius: 3px;
   margin-bottom: 10px;
   display: flex;
