--- a/packages/components/src/local/form/styles.module.scss
+++ b/packages/components/src/local/form/styles.module.scss
@@ -16,7 +16,7 @@
   background-color: #ffb6c1;
 }
 .planning {
-  background-color: #1A394D;
+  background-color: #1a394d;
 }
 .adjudication {
   background-color: #fafad2;
