--- a/packages/components/src/local/map-bar/styles.module.scss
+++ b/packages/components/src/local/map-bar/styles.module.scss
@@ -32,7 +32,7 @@
   box-sizing: border-box;
   bottom: 0;
   left: 0;
-  height: 345px;
+  max-height: 1345px;
   overflow-y: auto;
   border-top: 1px solid #0a2c41;
   border-left: 1px solid #0a2c41;
