--- a/packages/components/src/local/form-elements/button/styles.module.scss
+++ b/packages/components/src/local/form-elements/button/styles.module.scss
@@ -6,12 +6,11 @@
   padding: 0.375rem 0.875rem;
   color: #fff;
   text-transform: uppercase;
-  margin: 0 auto;
+  margin: 0;
   font-family: inherit;
   font-weight: 300;
   line-height: 0.9375rem;
   font-size: 0.875rem;
-  margin-bottom: 0;
   font-family: "Roboto", "Helvetica", "Arial", sans-serif;
   font-weight: 300;
   box-sizing: border-box;
