--- a/packages/components/src/local/form-elements/button/styles.module.scss
+++ b/packages/components/src/local/form-elements/button/styles.module.scss
@@ -1,5 +1,5 @@
 .main {
-  background-color: #54667C;
+  background-color: #54667c;
   display: inline-block;
   border-width: 0;
   border-radius: 0.3125rem;
@@ -19,5 +19,5 @@
 }
 
 .main:hover {
-  background-color: #4B5B6E;
+  background-color: #4b5b6e;
 }
