--- a/packages/components/src/local/form-elements/speed/styles.module.scss
+++ b/packages/components/src/local/form-elements/speed/styles.module.scss
@@ -36,7 +36,7 @@
   cursor: pointer;
 }
 .speed-active {
-  background-color: #9EA9B1;
+  background-color: #9ea9b1;
 }
 .speed-selected {
   background-color: #fff;
@@ -51,7 +51,7 @@
 }
 
 .result h2 {
-  margin: 4px 0 15px 0;
+  margin: 4px 0 15px;
   line-height: 1.2;
   font-size: 36px;
 }
