--- a/packages/components/src/local/form-elements/form-group/styles.module.scss
+++ b/packages/components/src/local/form-elements/form-group/styles.module.scss
@@ -24,11 +24,21 @@
   box-sizing: border-box;
 }
 
-.align-left { justify-content: flex-start; }
-.align-center { justify-content: center; }
-.align-right { justify-content: flex-end; }
-.align-justify { justify-content: space-between; }
-.align-justify-center { justify-content: space-around; }
+.align-left {
+  justify-content: flex-start;
+}
+.align-center {
+  justify-content: center;
+}
+.align-right {
+  justify-content: flex-end;
+}
+.align-justify {
+  justify-content: space-between;
+}
+.align-justify-center {
+  justify-content: space-around;
+}
 
 .disable-offsets {
   padding: 0;
