Only enable Save button for Plan-Turn if it's a non-mobile state, or if a speed is assigned

--- a/packages/components/src/local/form-elements/button/styles.module.scss
+++ b/packages/components/src/local/form-elements/button/styles.module.scss
@@ -21,3 +21,11 @@
 .main:hover {
   background-color: #4b5b6e;
 }
+
+.disabled:hover {
+  background-color: #54667c;
+}
+.disabled {
+  color: #999;
+  cursor: unset;
+}
